--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hattan Fashions</title>
-    <link rel="stylesheet" href="CSS/Style.css">
+    <link rel="stylesheet" href="CSS/style.css">
     
 </head>
 <body>
@@ -79,4 +79,5 @@
         <p>&copy; 2025 Hattan Fashions. All rights reserved.</p>
     </footer>
 </body>
+
 </html>
